syntax = "proto3";
package babylon.btclightclient.v1;

option go_package = "github.com/babylonchain/babylon/x/btclightclient/types";

import "google/protobuf/timestamp.proto";

// BTCHeader defines the structure of the incoming message bytes
message BTCHeaderBytes {
  bytes header_bytes = 1;
}
