syntax = "proto3";
package babylon.btclightclient.v1;


import "gogoproto/gogo.proto";
import "babylon/btclightclient/params.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/babylonchain/babylon/x/btclightclient/types";

// GenesisState defines the btclightclient module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
}

// this structure can go on a separate file
message BitcoinHeader {
  int32 version = 1;
  bytes parent_hash = 2;
  bytes merkle_root = 3;
  google.protobuf.Timestamp time = 4;
  uint32 nbits = 5;
  uint32 nonce = 6;
}
